# Livre

./: .gitexternals  .gitignore  .gitreview  .gitsubprojects  .travis.yml  ACKNOWLEDGEMENTS.txt  AUTHORS.txt  CMakeLists.txt  LICENSE.txt  README.md
apps/: CMakeLists.txt
apps/livre/: CMakeLists.txt  Livre.cpp  livre.cpp
apps/livreBatch/: CMakeLists.txt  livre_batch.py
apps/livreGUI/: AppSettings.h  CMakeLists.txt  Controller.cpp  Controller.h  LivreGUI.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  livreGUI.cpp  qtTypes.h  types.h
apps/livreGUI/Editor/: TransferFunctionEditor.cpp  TransferFunctionEditor.h
apps/livreGUI/animationController/: AnimationController.cpp  AnimationController.h  AnimationController.ui
apps/livreGUI/clipPlanesController/: ClipPlanesController.cpp  ClipPlanesController.h  ClipPlanesController.ui
apps/livreGUI/editor/: ColorMapWidget.cpp  ColorMapWidget.h  GradientRenderer.cpp  GradientRenderer.h  HoverPoints.cpp  TFWidget.cpp  TransferFunctionEditor.cpp  TransferFunctionEditor.h
apps/livreGUI/progress/: Progress.cpp  Progress.h  Progress.ui
apps/livreGUI/renderParametersController/: RenderParameters.h  RenderParametersController.cpp  RenderParametersController.h  RenderParametersController.ui
apps/livreGUI/resources/: resources.qrc
apps/livreGUI/stimuliController/: GeneratorModel.cpp  GeneratorModel.h  GeneratorPropertiesModel.cpp  GeneratorPropertiesModel.h  PropertyEditDelegate.cpp  PropertyEditDelegate.h  StimuliController.cpp  StimuliController.h  nestData.cpp  nestData.h
apps/livreGUI/tfEditor/: ColorMapWidget.cpp  ColorMapWidget.h  GradientRenderer.cpp  GradientRenderer.h  HoverPoints.cpp  TFWidget.cpp  TFWidget.h  TransferFunctionEditor.cpp  TransferFunctionEditor.h  Utilities.h
apps/livreGUI/transferFunctionEditor/: AlphaWidget.cpp  AlphaWidget.h  AlphaWidget.qml  Checkerboard.qml  ColorMapWidget.cpp  ColorMapWidget.h  ColorWidget.cpp  ColorWidget.h  ColorWidget.qml  ControlPoints.qml  ControlPointsWidget.cpp  ControlPointsWidget.h  Histogram.qml  HoverPoints.cpp  HoverPoints.h  RangeIndicator.qml  RangeWidget.cpp  RangeWidget.h  RangeWidget.qml  RangeWidget.ui  TFWidget.cpp  TFWidget.h  TransferFunctionEditor.cpp  TransferFunctionEditor.h  TransferFunctionEditor.ui  (+4 more)
apps/livreService/: CMakeLists.txt  dataService.h  dataSource.cpp
libs/msv/: CMakeLists.txt  files.cmake
livre/: CMakeLists.txt
livre/Eq/: CMakeLists.txt  Channel.cpp  Channel.h  Client.cpp  Client.h  Config.cpp  Config.h  Error.cpp  Error.h  Event.h  Files.cmake  FrameData.cpp  FrameData.h  FrameGrabber.cpp  FrameGrabber.h  Node.cpp  Node.h  Pipe.cpp  Pipe.h  Window.cpp  Window.h  coTypes.h  eqTypes.h  types.h
livre/Lib/: CMakeLists.txt  Files.cmake  types.h
livre/UVF/: CMakeLists.txt
livre/core/: CMakeLists.txt  Files.cmake  dashTypes.h  lunchboxTypes.h  mathTypes.h  types.h  vocabulary.h
livre/data/: CMakeLists.txt  DFSTraversal.cpp  DFSTraversal.h  DataSource.cpp  DataSource.h  DataSourcePlugin.cpp  DataSourcePlugin.h  DataSourceVisitor.cpp  DataSourceVisitor.h  Frustum.cpp  Frustum.h  LODNode.cpp  LODNode.h  MemoryDataSource.cpp  MemoryDataSource.h  MemoryUnit.cpp  MemoryUnit.h  NodeId.cpp  NodeId.h  NodeVisitor.h  RawDataSource.cpp  RawDataSource.h  SelectVisibles.cpp  SelectVisibles.h  VolumeInformation.cpp  VolumeInformation.h  types.h
livre/eq/: CMakeLists.txt  Channel.cpp  Channel.h  Client.cpp  Client.h  Config.cpp  Config.h  ConnectionDefinitions.h  Engine.cpp  Engine.h  Error.cpp  Error.h  Event.h  EventHandler.cpp  EventHandler.h  Files.cmake  FrameData.cpp  FrameData.h  FrameGrabber.cpp  FrameGrabber.h  Node.cpp  Node.h  Pipe.cpp  Pipe.h  Window.cpp  Window.h  coSerialization.h  coTypes.h  eqTypes.h  serialization.h  types.h
livre/lib/: CMakeLists.txt  types.h
livre/remote/: CMakeLists.txt  dataSource.cpp  dataSource.h
livre/uvf/: CMakeLists.txt  UVFDataSource.cpp  UVFDataSource.h  tuvokTypes.h
renderers/glRaycaster/: CMakeLists.txt  GLRaycastRenderer.cpp  GLRaycastRenderer.h  GLRaycasterPipeline.cpp  GLRaycasterPipeline.h  GLRenderUploadFilter.cpp  GLRenderUploadFilter.h
tests/: CMakeLists.txt
tests/Cache/: Cache.h  CacheObjectObserver.h  ValidCacheObject.h  cache.cpp
tests/Data/: dataSource.cpp
tests/Lib/: events.cpp
tests/core/: CMakeLists.txt  cache.cpp  clipPlanes.cpp  frameUtils.cpp  signalledVariable.cpp  tf_c.1dt  tf_f.1dt  transferFunction.cpp  volumeInformation.cpp
tests/data/: dataSource.cpp  lodSelection.cpp  rawDatasource.cpp  volumeInformation.cpp
tests/lib/: cache.cpp  dataCache.cpp  events.cpp  lodSelection.cpp  nucleon.nrrd  rawDatasource.cpp  rendererParameters.cpp  volumeRendererParameters.cpp
tests/perf/: remoteDataSource.cpp
tests/pipeline/: pipeline.cpp
tests/uvf/: exampledatadescpriton.txt  uvf.cpp
tools/: CMakeLists.txt
tools/cudaTest/: cpuDecompressor.cpp  cpuDecompressor.h  cudaDecompressor.cu  cudaDecompressor.h  cudaDecompressorKernel.cu  main.cpp
tools/dataConverter/: dataConverter.cpp  main.cpp
tools/histBuilder/: main.cpp
tools/tensorConverter/: main.cpp
tools/tmpTst/: main.cpp
tools/treeBuilder/: main.cpp
tools/treeVisualization/: CMakeLists.txt  glwidget.cpp  glwidget.h  main.cpp  window.cpp  window.h
tools/visGUI/: CMakeLists.txt  connectDialog.cpp  controller.cpp  controller.h  mainWindow.cpp  mainWindow.h  recentFiles.cpp  recentFiles.h
volVis/: CMakeLists.txt  files.cmake  main.cpp  mainTests.cpp
volVis/EQ/: channel.cpp  channel.h  config.cpp  config.h  frameData.cpp  guiDock.cpp  guiDock.h  guiPackets.h  initData.cpp  localInitData.cpp  node.cpp  pipe.cpp  pipe.h  screenGrabber.cpp  screenGrabber.h  volVis.cpp  volumeInfo.cpp  volumeInfo.h  window.cpp
volVis/LB/: cameraParameters.cpp  orderEstimator.cpp  orderEstimator.h  renderNode.h
volVis/asyncFetcher/: aglWindowShared.cpp  glXWindowShared.h  gpuAsyncLoader.cpp  gpuAsyncLoaderBase.cpp  gpuAsyncLoader_.cpp  gpuCacheIndex.cpp  gpuCacheIndex.h  gpuCacheManager.cpp  gpuCacheManager.h  gpuCommands.h
volVis/renderer/: glslShaders.cpp  model.cpp  model.h  rendererBase.cpp  rendererBase.h
(+584 files in other folders)
